Redirecting to https://github.com/venushka/

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>adahas.com</title>
+    <meta http-equiv="refresh" content="0; url=https://github.com/venushka/" />
+    <title>venushka.github.io</title>
   </head>
   <body>
-    <p>adahas.com</p>
   </body>
 </html>
   
